CMS7-8770: Fix breadcrumb on IE10/IE11 - Changed Breadcrumb implementation. It now renders separator items in separate <li> elements. This way text-clipping works nicely on IE10/IE11 - Removed BreadcrumbModel, used LoadDetachableModels instead. - Simplified CSS and moved padding's/margins to make the script for IE10 that sets the width of bottom-left work correct - breadcrumb center styling with flex-box - min-width for link/label items ensures readability of short names - made it work on IE10&IE11

--- a/cms/api/src/main/styling/less/_breadcrumbs.less
+++ b/cms/api/src/main/styling/less/_breadcrumbs.less
@@ -19,49 +19,43 @@
     display: flex;
     flex-direction: row;
     height: 100%;
+    align-items: center;
 
     > li {
-      align-items: stretch;
-      display: flex;
-      min-width: 40px;
+      -ms-flex-positive: 0;
+      -ms-flex-negative: 1;
 
-      > a,
-      > span,
-      > svg {
-        align-self: center;
+      &:last-child {
+        margin-right: 8px;
       }
+    }
+
+    .breadcrumb-separator {
+      padding-left: 4px;
+      padding-right: 4px;
 
       > svg {
         width: 12px;
         min-width: 12px;
         height: 12px;
         min-height: 12px;
-        padding-top: 2px;
-      }
-
-      > a,
-      > span {
-        padding-right: 4px;
-        padding-left: 4px;
-        .truncate();
-        min-width: 0;
-      }
-
-      &:first-child > a,
-      &:first-child > span {
-        padding-left: 0;
-      }
-
-      &:last-child > a,
-      &:last-child > span {
-        padding-right: 0;
+        display: block;
+        padding-top: 1px;
       }
     }
+
+    .breadcrumb-link,
+    .breadcrumb-label {
+      .truncate();
+      min-width: 36px;
+    }
+
   }
 }
 
 .hippo-dialog-bottom-left {
   .hippo-breadcrumbs {
     padding-left: 16px;
+    box-sizing: padding-box;
   }
 }
